添加了磁盘映射功能 但是在管理员情况下运行并不会显示磁盘到资源管理器 下一步准备解决

--- a/NetDrive/NetDrive/NetDrive.ui
+++ b/NetDrive/NetDrive/NetDrive.ui
@@ -40,7 +40,7 @@
      <string>服务器地址</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="server_address">
     <property name="geometry">
      <rect>
       <x>290</x>
@@ -129,7 +129,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>PushButton</string>
+     <string>连接</string>
     </property>
    </widget>
   </widget>
