添加两个icon 稍微改进界面 下一步准备处理组合控件嵌入或者独立函数编写

--- a/NetDrive/NetDrive/NetDrive.qrc
+++ b/NetDrive/NetDrive/NetDrive.qrc
@@ -1,4 +1,6 @@
 <RCC>
-    <qresource prefix="NetDrive">
+    <qresource prefix="/NetDrive">
+        <file>Resources/add.png</file>
+        <file>Resources/network 2.png</file>
     </qresource>
 </RCC>
